# serialization_demo

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
include/: Person.hpp  json_helper.hpp  proto_helper.hpp
protobuf/: CMakeLists.txt  Person.proto
